writing-a-c-compiler-tests/tests/chapter_6/valid/ternary_precedence.c
int main(void) {
    int a = 10;
     
    return a || 0 ? 20 : 0;
}