writing-a-c-compiler-tests/tests/chapter_6/invalid_parse/extra_credit/label_declaration.c
int main(void) {
 
label:
    int a = 0;
    return 0;
}